<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_white_48px"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_48px"
        app:showAsAction="always"/>

    <item
        android:id="@+id/copy"
        android:title="@string/copy"
        android:icon="@drawable/ic_content_copy_white_48px"
        app:showAsAction="always"/>

    <item
        android:id="@+id/move"
        android:title="@string/move"
        android:icon="@drawable/ic_call_made_white_48px"
        app:showAsAction="always"/>

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_48px"
        app:showAsAction="always"/>
</menu>