<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/garret"
            android:icon="@drawable/ic_person_white_48px"
            android:title="@string/garret" />

        <item
            android:id="@+id/donate"
            android:icon="@drawable/ic_favorite_white_48px"
            android:title="@string/donate" />

        <item
            android:id="@+id/website"
            android:icon="@drawable/ic_open_in_browser_white_48px"
            android:title="@string/website" />

        <item
            android:id="@+id/github"
            android:icon="@drawable/ic_github"
            android:title="@string/github" />

    </group>

</menu>