<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:colorBackground"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/statusspacer"/>

    <android.support.v7.widget.Toolbar
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/donate_toolbar"
        android:background="?attr/colorPrimary"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/onedonate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginRight="100dp"
                    android:layout_gravity="left|center_vertical"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/onetitle"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/onedesc"
                        android:textSize="10dp"
                        android:textStyle="italic"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oneprice"
                    android:layout_gravity="right|center_vertical"/>

            </FrameLayout>

            <FrameLayout
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/twodonate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginRight="100dp"
                    android:layout_gravity="left|center_vertical"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twotitle"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twodesc"
                        android:textSize="10dp"
                        android:textStyle="italic"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twoprice"
                    android:layout_gravity="right|center_vertical"/>

            </FrameLayout>

            <FrameLayout
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/fivedonate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginRight="100dp"
                    android:layout_gravity="left|center_vertical"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fivetitle"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fivedesc"
                        android:textSize="10dp"
                        android:textStyle="italic"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fiveprice"
                    android:layout_gravity="right|center_vertical"/>

            </FrameLayout>

            <FrameLayout
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/tendonate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginRight="100dp"
                    android:layout_gravity="left|center_vertical"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tentitle"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tendesc"
                        android:textSize="10dp"
                        android:textStyle="italic"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tenprice"
                    android:layout_gravity="right|center_vertical"/>

            </FrameLayout>

            <FrameLayout
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/fifteendonate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginRight="100dp"
                    android:layout_gravity="left|center_vertical"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fifteentitle"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fifteendesc"
                        android:textSize="10dp"
                        android:textStyle="italic"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifteenprice"
                    android:layout_gravity="right|center_vertical"/>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>